--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <meta property="og:description" content="Memoria descriptiva Departamento familiar, dasado en una familia tradicional de 4 integrantes">
 <meta property="og:image" content="https://i.imgur.com/5zJdj15.png">
 <meta property="fb:app_id" content="1144256477060293">
-  <link rel="stylesheet" href="/estilos/styles.css">
+  <link rel="stylesheet" href="estilos/styles.css">
   <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 />
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 <link rel="apple-touch-icon" sizes="180x180" href="images/logobnpng.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/logobnpng.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/logobnpng.png">
 </head>
 <header>
  <a href="https://Octaviovr5.github.io/Portafolio-Octavio/" id="liga"> <img src="/images/OCTAVIO.png" alt="LOGO_OCTAVIO" id="logo" class="animate__animated animate__flash animate__infinite"></a>
@@ -36,7 +36,7 @@
         </p>
     </div>    
     <div class="animate__animated animate__bounceInDown animate__delay-2s">
-        <img src="/images/maqueta.png" alt="MAQUETA" id="map" >
+        <img src="images/maqueta.png" alt="MAQUETA" id="map" >
       </div>
     </div>
     <div class="page" id="page2">
@@ -44,9 +44,9 @@
     <p>El presente proyecto se centra en el diseño y construcción de una vivienda unifamiliar que refleja las necesidades de una familia moderna. Ubicada en un entorno urbano consolidado, esta propuesta arquitectónica tiene como objetivo ofrecer espacios confortables, funcionales y sostenibles para sus habitantes. La vivienda se desarrolla sobre un terreno de dimensiones óptimas para una construcción de estas características, con una orientación que maximiza el aprovechamiento de la luz natural y la ventilación cruzada.
     El diseño sigue los principios del minimalismo arquitectónico, una corriente que prioriza la simplicidad formal y la funcionalidad espacial. Esto se traduce en un espacio que elimina elementos superfluos y favorece líneas limpias, colores neutros y acabados de alta calidad. El proyecto también incorpora materiales duraderos y sistemas constructivos eficientes, cumpliendo con los estándares actuales de seguridad estructural y sostenibilidad
       </p>
-      <img src="/images/plano.png" alt="PLANO" id="img2">
+      <img src="images/plano.png" alt="PLANO" id="img2">
       <div id="boton-pdf">
-      <button id="boton" class="animate__animated"> PDF ⭳ </button>
+     <a href="images/plano.pdf" target="_blank" > <button id="boton" class="animate__animated"> PDF ⭳ </button></a>
     </div>
     </div>
 
@@ -55,7 +55,7 @@
     <p>El terreno de 153 metros cuadrados, ubicado en Calle Me Voy 365, se encuentra en una zona urbana de la Colonia Esperanza, Nezahualcóyotl, Estado de México. Este lote tiene una geometría regular con un frente de 9 metros y un fondo de 17 metros. <br>Su orientación permite el diseño de espacios iluminados y ventilados de manera natural, con un patio trasero situado al norte, que ocupa aproximadamente una cuarta parte de la superficie total del terreno. Este patio se concibió como un espacio abierto destinado a actividades recreativas y de descanso, además de servir como punto de ventilación para el interior de la vivienda.
       </p>
       <div class="animate__animated" id="map-container">
-        <img src="/images/mapa.png" alt="MAPS" id="img3">
+        <img src="images/mapa.png" alt="MAPS" id="img3">
     </div>    
     </div>
     <div class="page" id="page4">
@@ -66,9 +66,9 @@
         La zona cuenta con acceso a infraestructura básica proporcionada por el municipio, incluyendo redes de agua potable, drenaje sanitario y suministro eléctrico. El entorno inmediato está compuesto principalmente por viviendas unifamiliares y pequeños comercios, lo que garantiza un ambiente tranquilo y residencial. La cercanía a servicios como transporte público, escuelas y tiendas de abarrotes añade conveniencia para los residentes.
       </p>
       <video id="img4" autoplay muted loop>
-        <source src="/images/aerea-a.mp4" type="video/mp4" alt="VISTA AEREA" >
-        <source src="/images/aerea-a.ogv" type="video/ogg" alt="VISTA AEREA">
-        <source src="/images/aerea-a.webm" type="video/webm" alt="VISTA AEREA">
+        <source src="images/aerea-a.mp4" type="video/mp4" alt="VISTA AEREA" >
+        <source src="images/aerea-a.ogv" type="video/ogg" alt="VISTA AEREA">
+        <source src="images/aerea-a.webm" type="video/webm" alt="VISTA AEREA">
         Tu navegador no soporta el elemento de video.
       </video>      
     </div>
@@ -78,26 +78,26 @@
         
         <br>El patio trasero es un elemento fundamental del diseño, funcionando como una extensión del espacio habitable y proporcionando un lugar al aire libre para actividades recreativas. El diseño minimalista de la vivienda se refuerza con el uso de colores claros, líneas rectas y acabados que transmiten modernidad y limpieza visual.
         </p>
-        <img src="/images/p-sala.png" alt="SALA" id="img5">
+        <img src="images/p-sala.png" alt="SALA" id="img5">
     </div>
     <div class="page" id="page5-1">
-      <div class="animate__animated" id="sala-container"><img src="/images/comedor-enhanced.png" alt="COMEDOR" id="imgd" ></div>
+      <div class="animate__animated" id="sala-container"><img src="images/comedor-enhanced.png" alt="COMEDOR" id="imgd" ></div>
       <p>La zona social, que incluye la sala, comedor y cocina, se organiza en un esquema de planta abierta. Esta configuración permite una mayor interacción entre los habitantes y aprovecha al máximo la entrada de luz natural. La zona privada está compuesta por dos recámaras ubicadas al frente de la vivienda, separadas de las áreas comunes mediante muros y puertas, para garantizar la tranquilidad de los ocupantes. Por último, la oficina y el baño completo se ubican en áreas estratégicas que aseguran su accesibilidad sin interferir con la circulación principal.</p>
       <div class="animate__animated" id="sala-container2">
-      <img src="/images/cocina-enhanced.png" alt="COCINA" id="imgdd"></div>
+      <img src="images/cocina-enhanced.png" alt="COCINA" id="imgdd"></div>
     </div>
     <div class="page" id="page6">
       <h1>ESTRUCTURA Y CIMENTACIÓN</h1>
     <p>La cimentación de la vivienda se basa en un sistema de zapatas aisladas conectadas mediante trabes de cimentación. Este sistema es adecuado para las condiciones del suelo y las cargas que genera una construcción de una planta. Las zapatas están diseñadas para distribuir uniformemente las cargas verticales sobre el terreno, mientras que las trabes de cimentación aseguran la estabilidad de la estructura y la absorción de esfuerzos horizontales.
       </p>
-     <img src="/images/oficinare.png" alt="OFICINA" id="img6">
+     <img src="images/oficinare.png" alt="OFICINA" id="img6">
      </div>
     <div class="page" id="page6-1">
       <p>
         El sistema estructural principal está compuesto por marcos rígidos de concreto armado, diseñados para soportar las cargas muertas y vivas de la edificación, así como para resistir los movimientos sísmicos característicos de la región. Estos marcos incluyen columnas de 30 x 30 cm y vigas de concreto que en conjunto forman una estructura robusta y confiable.
       <br>En los muros, se emplean bloques huecos de concreto de 20 cm de ancho, que ofrecen una excelente combinación de resistencia y aislamiento térmico. La cubierta de la vivienda está formada por lozas macizas de concreto que, además de proporcionar aislamiento acústico y térmico, ofrecen una base sólida para futuros proyectos, como la instalación de sistemas fotovoltaicos o tanques de almacenamiento.
       </p>
-      <div> <img src="/images/recam-enhanced.png" alt="RECAMARA PRINCIPAL" id="img6">
+      <div> <img src="images/recam-enhanced.png" alt="RECAMARA PRINCIPAL" id="img6">
       <!-- <img src="/images/reca-enhanced.png" alt="RECAMARA SECUNDARIA" id="imgd1">--> </div> 
     </div>
     </div>
@@ -106,14 +106,14 @@
         <p>En el diseño y construcción de la vivienda se han seleccionado materiales de alta calidad que combinan funcionalidad, estética y sostenibilidad. Los muros exteriores e interiores están construidos con bloques huecos de concreto de 20 cm, que son recubiertos con estuco para un acabado liso y uniforme. Posteriormente, se aplican capas de pintura blanca y de tonos claros, que potencian la iluminación natural y crean un ambiente acogedor.
           
         </p> 
-        <img src="/images/reca-enhanced.png" alt="RECAMARA 2" id="img7">
+        <img src="images/reca-enhanced.png" alt="RECAMARA 2" id="img7">
   </div>
   <div class="page" id="page8">
     <p>
       El piso de toda la vivienda está revestido con cerámica estilo madera, un material que no solo es resistente al desgaste y fácil de limpiar, sino que también aporta calidez visual y una textura agradable. Las puertas y ventanas están fabricadas con aluminio anodizado, lo que garantiza durabilidad y un mantenimiento sencillo. Las ventanas incluyen vidrio transparente de alta calidad para maximizar la entrada de luz.
          <br> En cuanto a los techos, se han construido con lozas macizas de concreto que ofrecen resistencia y protección contra las inclemencias del tiempo. Además, los acabados en los techos siguen la línea minimalista, con colores neutros y texturas uniformes que complementan el diseño general de la vivienda.
     </p>
-    <img src="/images/bath.png" alt="BAÑO">
+    <img src="images/bath.png" alt="BAÑO">
     <footer>
       <div class="social-icons">
         <a href="https://www.facebook.com/octavio.velazquezr?mibextid=ZbWKwL" target="_blank">
@@ -129,6 +129,6 @@
 </div>
 <!-- <button class="prev">Anterior</button>
 <button class="next">Siguiente</button> -->
-<script src="/scripts/script.js"></script>
+<script src="scripts/script.js"></script>
 </body>
 </html>
