--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/logobnpng.png">
 </head>
 <header>
- <a href="https://Octaviovr5.github.io/Portafolio-Octavio/" id="liga"> <img src="/images/OCTAVIO.png" alt="LOGO_OCTAVIO" id="logo" class="animate__animated animate__flash animate__infinite"></a>
+ <a href="https://Octaviovr5.github.io/Portafolio-Octavio/" id="liga"> <img src="images/OCTAVIO.png" alt="LOGO_OCTAVIO" id="logo" class="animate__animated animate__flash animate__infinite"></a>
 </header>
 <body>
 <div class="book-container">
