--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="Memoria descriptiva">
 <meta property="og:description" content="Memoria descriptiva Departamento familiar, dasado en una familia tradicional de 4 integrantes">
-<meta property="og:image" content="https://imgur.com/ZwUCXbP">
+<meta property="og:image" content="https://i.imgur.com/XXbyIow.png">
 <meta property="fb:app_id" content="1144256477060293">
   <link rel="stylesheet" href="estilos/styles.css">
   <link
